--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>PhD in AI - Under Construction</title>
+<title><h1>Welcome to PhD in AI</h1>
+<p>Your ultimate resource for AI research, courses, and news.</p>
+</title>
 </head>
 <body>
-<h1>Website Under Construction</h1>
-<p>Launching on January 1, 2026.</p>
+<h1><h1>Welcome to PhD in AI</h1>
+<p>Your ultimate resource for AI research, courses, and news.</p>
+</h1>
 </body>
 </html>
