--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title><h1>Welcome to PhD in AI</h1>
-<p>Your ultimate resource for AI research, courses, and news.</p>
-</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PhD in AI</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<h1><h1>Welcome to PhD in AI</h1>
-<p>Your ultimate resource for AI research, courses, and news.</p>
-</h1>
+
+    <header>
+        <h1>Welcome to PhD in AI</h1>
+        <p>Your ultimate resource for AI research, courses, and news.</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="research.html">Research</a></li>
+            <li><a href="news.html">AI News</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h2>Website Under Construction</h2>
+        <p>Launching on January 1, 2026.</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 PhD in AI. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
