--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <h1>PhD in AI</h1>
         <p>Exploring the Depths of Artificial Intelligence</p>
-        <button onclick="toggleTheme()">Toggle Theme</button>
+        <button id="theme-toggle" onclick="toggleTheme()">☀️</button>
     </header>
     
     <nav>
