--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PhD in AI</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script>
-        function toggleTheme() {
-            document.body.classList.toggle('dark-mode');
-            localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
+<script>
+    function toggleTheme() {
+        document.body.classList.toggle('dark-mode');
+        localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
+
+        // Update theme toggle icon
+        document.getElementById('theme-toggle').innerText = 
+            document.body.classList.contains('dark-mode') ? '🌙' : '☀️';
+    }
+
+    window.onload = function() {
+        if (localStorage.getItem('theme') === 'dark') {
+            document.body.classList.add('dark-mode');
+            document.getElementById('theme-toggle').innerText = '🌙';
         }
-        window.onload = function() {
-            if (localStorage.getItem('theme') === 'dark') {
-                document.body.classList.add('dark-mode');
-            }
-        }
-    </script>
+    }
+</script>
+
 </head>
 <body>
     <header>
