--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <header>
         <h1>PhD in AI</h1>
         <p>Exploring the Depths of Artificial Intelligence</p>
-        <button id="theme-toggle" onclick="toggleTheme()">☀️</button>
+        <div id="theme-toggle" onclick="toggleTheme()"></div>
+
     </header>
     
     <nav>
