--- a/Topics.html
+++ b/Topics.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Courses - PhD in AI</title>
+<title>Topics - PhD in AI</title>
 </head>
 <body>
-<h1>AI Courses</h1>
+<h1>AI Topics</h1>
 <p>Coming soon...</p>
 </body>
 </html>
