--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Exploring the Depths of Artificial Intelligence</p>
         <div class="toggle-container">
             <button id="theme-toggle" onclick="toggleTheme()">
-                <span class="theme-icon">☀️</span>
+                <span class="theme-dot"></span>
             </button>
         </div>
     </header>
