--- a/research.html
+++ b/research.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Research - PhD in AI</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Research - PhD in AI</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<h1>AI Research</h1>
-<p>Latest AI research papers and summaries.</p>
+    <nav class="nav-top">
+        <ul>
+            <li><a href="index.html" onclick="adjustNavPosition('home')">Home</a></li>
+            <li><a href="topics.html">Topics</a></li>
+            <li><a href="research.html">Research</a></li>
+            <li><a href="news.html">AI News</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h2>Research</h2>
+        <p>Deep dive into AI research papers and discoveries.</p>
+    </main>
 </body>
 </html>
