--- a/news.html
+++ b/news.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>AI News - PhD in AI</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI News - PhD in AI</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<h1>Latest AI News</h1>
-<p>Auto-fetched AI research updates from ArXiv.</p>
+    <nav class="nav-top">
+        <ul>
+            <li><a href="index.html" onclick="adjustNavPosition('home')">Home</a></li>
+            <li><a href="topics.html">Topics</a></li>
+            <li><a href="research.html">Research</a></li>
+            <li><a href="news.html">AI News</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h2>AI News</h2>
+        <p>Latest updates and insights in AI.</p>
+    </main>
 </body>
 </html>
