--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li><a href="topics.html" onclick="adjustNavPosition('other')">Topics</a></li>
             <li><a href="research.html" onclick="adjustNavPosition('other')">Research</a></li>
             <li><a href="news.html" onclick="adjustNavPosition('other')">AI News</a></li>
-            <li><a href="contact.html" onclick="adjustNavPosition('other')">Contact</a></li>
+            <li><a href="tools.html" onclick="adjustNavPosition('other')">Tools</a></li>
         </ul>
     </nav>
     
