--- a/tools.html
+++ b/tools.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Tools - PhD in AI</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tools - PhD in AI</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<h1>AI Tools & Resources</h1>
-<p>A collection of AI libraries, datasets, and useful links.</p>
+    <nav class="nav-top">
+        <ul>
+            <li><a href="index.html" onclick="adjustNavPosition('home')">Home</a></li>
+            <li><a href="topics.html">Topics</a></li>
+            <li><a href="research.html">Research</a></li>
+            <li><a href="news.html">AI News</a></li>
+            <li><a href="tools.html">Tools</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h2>Contact</h2>
+        <p>Reach out for inquiries or collaborations.</p>
+    </main>
 </body>
 </html>
