--- a/research.html
+++ b/research.html
@@ -13,7 +13,7 @@
             <li><a href="topics.html">Topics</a></li>
             <li><a href="research.html">Research</a></li>
             <li><a href="news.html">AI News</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="tools.html">Tools</a></li>
         </ul>
     </nav>
     <main>
