--- a/topics.html
+++ b/topics.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <header>
+        <h1>PhD in AI</h1>
+        <p>Exploring the Depths of Artificial Intelligence</p>
+        <div class="toggle-container">
+            <button id="theme-toggle" onclick="toggleTheme()">
+                <span class="theme-dot"></span>
+            </button>
+        </div>
+    </header>
     <nav class="nav-top">
         <ul>
             <li><a href="index.html" onclick="adjustNavPosition('home')">Home</a></li>
