--- a/topics.html
+++ b/topics.html
@@ -5,6 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Topics - PhD in AI</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script>
+        function toggleTheme() {
+            document.body.classList.toggle('dark-mode');
+            localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
+        }
+        
+        function adjustNavPosition(page) {
+            const nav = document.querySelector('nav');
+            if (page === 'home') {
+                nav.classList.remove('nav-top');
+                nav.classList.add('nav-center');
+            } else {
+                nav.classList.remove('nav-center');
+                nav.classList.add('nav-top');
+            }
+        }
+
+        window.onload = function() {
+            if (localStorage.getItem('theme') === 'dark') {
+                document.body.classList.add('dark-mode');
+            }
+        }
+    </script>
 </head>
 <body>
     <header>
