--- a/topics.html
+++ b/topics.html
@@ -39,25 +39,21 @@
                 document.body.classList.add('dark-mode');
             }
             highlightActivePage();
-            adjustNavPosition('other');
+            adjustNavPosition(window.location.pathname.includes('index.html') ? 'home' : 'other');
         }
     </script>
 </head>
 <body>
-    <header>
-        <h1>PhD in AI</h1>
-        <p>Exploring the Depths of Artificial Intelligence</p>
-        <div class="toggle-container">
-            <button id="theme-toggle" onclick="toggleTheme()">
-                <span class="theme-dot"></span>
-            </button>
-        </div>
-    </header>
+    <div class="toggle-container">
+        <button id="theme-toggle" onclick="toggleTheme()">
+            <span class="theme-dot"></span>
+        </button>
+    </div>
     
     <nav class="nav-top transition">
         <ul>
             <li><a href="index.html" onclick="adjustNavPosition('home')">Home</a></li>
-            <li><a href="topics.html" class="active-link" onclick="adjustNavPosition('other')">Topics</a></li>
+            <li><a href="topics.html" onclick="adjustNavPosition('other')" class="active-link">Topics</a></li>
             <li><a href="research.html" onclick="adjustNavPosition('other')">Research</a></li>
             <li><a href="news.html" onclick="adjustNavPosition('other')">AI News</a></li>
             <li><a href="tools.html" onclick="adjustNavPosition('other')">Tools</a></li>
@@ -66,15 +62,15 @@
     
     <main>
         <section class="content">
-            <h2>Topics in AI</h2>
-            <p>Explore various AI concepts, methodologies, and applications.</p>
+            <h2>AI Topics</h2>
+            <p>Explore various topics in AI, including:</p>
             <ul>
-                <li>Machine Learning</li>
-                <li>Deep Learning</li>
+                <li>Machine Learning and Deep Learning</li>
                 <li>Natural Language Processing</li>
                 <li>Computer Vision</li>
                 <li>Reinforcement Learning</li>
-                <li>AI Ethics</li>
+                <li>AI Ethics and Fairness</li>
+                <li>Generative AI and Large Language Models</li>
             </ul>
         </section>
     </main>
