--- a/topics.html
+++ b/topics.html
@@ -16,9 +16,9 @@
             nav.classList.add('transition');
             if (page === 'home') {
                 nav.classList.remove('nav-top');
-                nav.classList.add('nav-center');
+                nav.classList.add('nav-lower');
             } else {
-                nav.classList.remove('nav-center');
+                nav.classList.remove('nav-lower');
                 nav.classList.add('nav-top');
             }
         }
@@ -44,7 +44,7 @@
     </script>
 </head>
 <body>
-    <div class="toggle-container">
+    <div class="toggle-container" style="position: fixed; top: 10px; right: 20px; z-index: 100;">
         <button id="theme-toggle" onclick="toggleTheme()">
             <span class="theme-dot"></span>
         </button>
