--- a/about.html
+++ b/about.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>About - PhD in AI</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tray Example</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>About PhD in AI</h1>
-<p>This website is for PhD students to learn in-depth AI concepts.</p>
+    <div id="tray" class="tray">
+        <ul>
+            <li><a href="#page1">Page 1</a></li>
+            <li><a href="#page2">Page 2</a></li>
+            <li><a href="#page3">Page 3</a></li>
+        </ul>
+    </div>
+
+    <div id="content">
+        <h1 id="page1">Page 1</h1>
+        <p>Content for page 1...</p>
+        <h1 id="page2">Page 2</h1>
+        <p>Content for page 2...</p>
+        <h1 id="page3">Page 3</h1>
+        <p>Content for page 3...</p>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
