--- a/topics.html
+++ b/topics.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tray Example</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="assets/css/style.css">
+   
 <body>
     <div id="tray" class="tray">
         <ul>
